main/default/objects/Pre_Rate_Calculator_Setting__mdt/Pre_Rate_Calculator_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Pre Rate Calculator Setting</label>
    <pluralLabel>Pre Rate Calculator Settings</pluralLabel>
</CustomObject>