main/default/objects/Pre_Rate_Calculator_Setting__mdt/fields/AdditionalCoverageCodes__c.field-meta.xml
<CustomField>
    <fullName>AdditionalCoverageCodes__c</fullName>
    <label>AdditionalCoverageCodes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>