main/default/objects/Pre_Rate_Calculator_Setting__mdt/fields/Base_Rate_Table__c.field-meta.xml
<CustomField>
    <fullName>Base_Rate_Table__c</fullName>
    <label>Base Rate Table</label>
    <length>100</length>
    <type>Text</type>
</CustomField>