main/default/objects/Pre_Rate_Calculator_Setting__mdt/fields/CLI_Type_Deductible_Option__c.field-meta.xml
<CustomField>
    <fullName>CLI_Type_Deductible_Option__c</fullName>
    <label>CLI Type Deductible Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>