main/default/objects/Pre_Rate_Calculator_Setting__mdt/fields/CLI_Type_Main_Option__c.field-meta.xml
<CustomField>
    <fullName>CLI_Type_Main_Option__c</fullName>
    <label>CLI Type Main Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>