main/default/objects/Pre_Rate_Calculator_Setting__mdt/fields/County_Table_Name__c.field-meta.xml
<CustomField>
    <fullName>County_Table_Name__c</fullName>
    <label>County Table Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>