main/default/objects/Pre_Rate_Calculator_Setting__mdt/fields/Coverage_Code__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Code__c</fullName>
    <label>Coverage Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>