main/default/objects/Pre_Rate_Calculator_Setting__mdt/fields/Exec_Coverage_Code__c.field-meta.xml
<CustomField>
    <fullName>Exec_Coverage_Code__c</fullName>
    <label>Exec Coverage Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>