main/default/objects/Pre_Rate_Calculator_Setting__mdt/fields/ExecLmtDedCode__c.field-meta.xml
<CustomField>
    <fullName>ExecLmtDedCode__c</fullName>
    <label>ExecLmtDedCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>