main/default/objects/Pre_Rate_Calculator_Setting__mdt/fields/Industry_Modifier_Code__c.field-meta.xml
<CustomField>
    <fullName>Industry_Modifier_Code__c</fullName>
    <label>Industry Modifier Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>