main/default/objects/Pre_Rate_Calculator_Setting__mdt/fields/LimitILF_Table_Name__c.field-meta.xml
<CustomField>
    <fullName>LimitILF_Table_Name__c</fullName>
    <label>LimitILF Table Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>