main/default/objects/Pre_Rate_Calculator_Setting__mdt/fields/LmtDedCode__c.field-meta.xml
<CustomField>
    <fullName>LmtDedCode__c</fullName>
    <label>LmtDedCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>