main/default/objects/Pre_Rate_Calculator_Setting__mdt/fields/LmtDedRetentionCode__c.field-meta.xml
<CustomField>
    <fullName>LmtDedRetentionCode__c</fullName>
    <label>LmtDedRetentionCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>