main/default/objects/Pre_Rate_Calculator_Setting__mdt/fields/Modifier_Fields__c.field-meta.xml
<CustomField>
    <fullName>Modifier_Fields__c</fullName>
    <label>Modifier Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>