main/default/objects/Pre_Rate_Calculator_Setting__mdt/fields/Policy_Retention_Table_Name__c.field-meta.xml
<CustomField>
    <fullName>Policy_Retention_Table_Name__c</fullName>
    <label>Policy Retention Table Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>