main/default/objects/Pre_Rate_Calculator_Setting__mdt/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <label>ProductName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>