main/default/objects/Pre_Rate_Calculator_Setting__mdt/fields/SnT_Modifier_Code__c.field-meta.xml
<CustomField>
    <fullName>SnT_Modifier_Code__c</fullName>
    <label>SnT Modifier Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>